test/SemanticAnalysis/LifetimeMethods/InvalidArgumentCountMove.loci
// RUN: %locic %s --verify > %t
// RUN: FileCheck < %t %s

class TestClass() {
	// CHECK: .loci:6:2: error: lifetime method '::TestClass::__moveto' has incorrect argument count
	void __moveto(unused void* dest) noexcept { }
}

// CHECK: 1 error generated.
